@@ -61,15 +61,15 @@ class RAV1E(SettingPanel):
 
         grid.addLayout(self.init_modes(), 0, 2, 4, 4)
         grid.addLayout(self.init_single_pass(), 4, 2, 1, 1)
-        grid.addLayout(self._add_custom(), 5, 2, 1, 4)
+        grid.addLayout(self._add_custom(), 10, 0, 1, 6)
         grid.addWidget(QtWidgets.QWidget(), 5, 0)
-        grid.setRowStretch(5, 1)
+        grid.setRowStretch(9, 1)
         guide_label = QtWidgets.QLabel(
             f"<a href='https://github.com/xiph/rav1e/blob/master/README.md'>rav1e github</a>"
         )
         guide_label.setAlignment(QtCore.Qt.AlignBottom)
         guide_label.setOpenExternalLinks(True)
-        grid.addWidget(guide_label, 9, 0, -1, 1)
+        grid.addWidget(guide_label, 11, 0, -1, 1)
         self.setLayout(grid)
         self.hide()
 
