@@ -13,9 +13,10 @@
 * Adding #68 version upgrade dialogue
 * Adding icons to encoders drop down
 * Adding video filename path
-* Fixing taskbar does not always show icon
+* Fixing Windows taskbar does not always show icon
 * Fixing #55 GUI logs by splitting them from core logs
 * Fixing that mkv cover attachments would show as video tracks
+* Fixing plugins should not be available if no FFmpeg library for them
 * Changing major internal re-write to keep encoding even if GUI dies
 * Changing bitrate suggestion resolutions to be more readable with fps
 * Changing command builders to specify the temporary files themselves
